# pdf2learn

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
notebooks/: pdf2learn_colab.ipynb
output/: README.md
src/pdf2learn/: __init__.py  cli.py  config.py  logging_.py  models.py  orchestrator.py  paths.py
src/pdf2learn/assets/: style.css  toggle.js
src/pdf2learn/extract/: docling_engine.py  html_parser.py  llamaparse_engine.py  marker_engine.py
src/pdf2learn/render/: renderer.py
src/pdf2learn/render/templates/: base.html.j2
src/pdf2learn/render/templates/partials/: block.html.j2
tests/: conftest.py
tests/integration/: test_accessibility.py  test_directory.py  test_html_output.py  test_image_only_pdf.py  test_no_js_reading.py  test_rerun_versioning.py  test_single_file.py  test_unicode_paths.py
tests/unit/: test_cli.py  test_html_parser.py  test_layering.py  test_logging.py  test_paths.py  test_renderer.py
